--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "styled-media-query": "^2.1.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
