--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "@vitejs/plugin-react": "^3.0.0",
+    "@vitest/coverage-c8": "^0.27.1",
     "eslint": "^8.31.0",
     "eslint-plugin-react": "^7.31.11",
     "jest-styled-components": "^7.1.1",
